Create each hid_parent worker thread in main after attach.

--- a/trunk/uhidd/Makefile
+++ b/trunk/uhidd/Makefile
@@ -5,8 +5,8 @@ NO_MAN=
 
 WARNS?=6
 
-DPADD=	${LIBUSB}
-LDADD=	-lusb
+DPADD=	${LIBUSB} ${LIBPTHREAD}
+LDADD=	-lusb -lpthread
 
 CFLAGS+=-I. -I${.CURDIR} -g
 
