--- a/trunk/uhidd/Makefile
+++ b/trunk/uhidd/Makefile
@@ -1,5 +1,6 @@
 PROG=	uhidd
-SRCS=	hidparser.c hidump.c main.c usage_in_page.c usage_page.c
+SRCS=	hidparser.c hidump.c main.c mouse.c usage_in_page.c \
+	usage_page.c
 
 NO_MAN=
 
