Added configure file support.

--- a/trunk/uhidd/Makefile
+++ b/trunk/uhidd/Makefile
@@ -1,6 +1,6 @@
 PROG=	uhidd
 SRCS=	hidparser.c hidump.c kbd.c main.c mouse.c usage_in_page.c \
-	usage_page.c
+	usage_page.c lex.l parser.y y.tab.h
 
 NO_MAN=
 
