--- a/uhidd/uhidd.conf
+++ b/uhidd/uhidd.conf
@@ -4,11 +4,13 @@ AttachKeyboard yes
 AttachHID no
 
 generic {
-	Consumer:Volume_Up 1 0 "mixer -f $1 vol +1"
-	Consumer:Volume_Down 1 0 "mixer -f $1 vol -1"
+	"Consumer:AC Pan" 1 0 "mixer -f $1 vol +1"
+	"Generic Desktop:Wheel" 1 0 "mixer -f $1 vol +1"
+	"Consumer:Volume_Up" 1 0 "mixer -f $1 vol +1"
+	"Consumer:Volume_Down" 1 0 "mixer -f $1 vol -1"
 }
 
 0x1234:0x5678:1 {
 	Attach yes
-	Consumer:Volume_Up 1 0 "mixer -f $1 vol +1"
+	"Consumer:Volume_Up" 1 0 "mixer -f $1 vol +1"
 }
