Use awk scripts to generate usage_in_page.c and usage_page.c

--- a/trunk/uhidd/Makefile
+++ b/trunk/uhidd/Makefile
@@ -1,7 +1,9 @@
 PROG=	uhidd
-SRCS=	hidparser.c hidump.c kbd.c main.c mouse.c usage_in_page.c \
-	usage_page.c lex.l parser.y y.tab.h
+SRCS=	hidparser.c hidump.c kbd.c main.c mouse.c lex.l \
+	parser.y y.tab.h usage_in_page.c usage_page.c
 
+GENSRCS=	usage_in_page.c usage_page.c
+CLEANFILES=	${GENSRCS}
 NO_MAN=
 
 WARNS?=	6
@@ -10,5 +12,12 @@ DPADD=	${LIBUSB} ${LIBPTHREAD}
 LDADD=	-lusb -lpthread
 
 CFLAGS+=-I. -I${.CURDIR} -g
+
+.SUFFIXES:	.awk .c
+.awk.c:
+	awk -f ${.IMPSRC} usb_hid_usages > ${.TARGET}
+
+usage_in_page.c:	usb_hid_usages usage_in_page.awk
+usage_page.c:		usb_hid_usages usage_page.awk
 
 .include <bsd.prog.mk>
