--- a/uhidd/Makefile
+++ b/uhidd/Makefile
@@ -1,6 +1,7 @@
 PROG=	uhidd
-SRCS=	hid.c hidparser.c hidump.c kbd.c main.c mouse.c lex.l \
-	parser.y y.tab.h usage_in_page.c usage_page.c
+SRCS=	uhidd_hid.c uhidd_hidparser.c uhidd_hidump.c uhidd_kbd.c \
+	uhidd.c uhidd_mouse.c lex.l parser.y y.tab.h usage_in_page.c \
+	usage_page.c
 
 GENSRCS=	usage_in_page.c usage_page.c
 CLEANFILES=	${GENSRCS}
