--- a/trunk/uhidd/uhidd.conf
+++ b/trunk/uhidd/uhidd.conf
@@ -1,7 +1,7 @@
 # comment
 AttachMouse yes
-AttachKeyboard yes
-AttachHID no
+AttachKeyboard no
+AttachHID yes
 
 generic {
 	"Consumer:AC Pan" 1 0 "mixer -f $1 vol +1"
@@ -14,3 +14,7 @@ generic {
 	Attach yes
 	"Consumer:Volume_Up" 1 0 "mixer -f $1 vol +1"
 }
+
+#0x045e:0x009d:0 {
+#	Attach no
+#}
