--- a/uhidd/uhidd.conf
+++ b/uhidd/uhidd.conf
@@ -1,9 +1,8 @@
 # comment
-AttachMouse yes
-AttachKeyboard no
-AttachHID yes
-
-generic {
+global {
+	AttachMouse yes
+	AttachKeyboard no
+	AttachHID yes
 	"Consumer:AC Pan" 1 0 "mixer -f $1 vol +1"
 	"Generic Desktop:Wheel" 1 0 "mixer -f $1 vol +1"
 	"Consumer:Volume_Up" 1 0 "mixer -f $1 vol +1"
@@ -11,7 +10,7 @@ generic {
 }
 
 0x1234:0x5678:1 {
-	Attach yes
+	AttachKeyboard yes
 	"Consumer:Volume_Up" 1 0 "mixer -f $1 vol +1"
 }
 
