--- a/trunk/uhidd/uhidd.rc
+++ b/trunk/uhidd/uhidd.rc
@@ -9,6 +9,11 @@
 
 . /etc/rc.subr
 
+# Usage:
+#	uhidd start ugenX.Y	# start uhidd on device 'ugenX.Y'
+#	uhidd stop ugenX.Y	# stop uhidd on device 'ugenX.Y'
+#	uhidd stop		# stop all uhidd instances.
+
 name="uhidd"
 rcvar=`set_rcvar`
 command="/usr/local/sbin/${name}"
