--- a/uhidd/uhidd-devd.conf.sample
+++ b/uhidd/uhidd-devd.conf.sample
@@ -1,4 +1,4 @@
 attach 0 {
 	match "device-name" "ugen[0-9]+.[0-9]+";
-	action "/usr/local/sbin/uhidd -kmhs /dev/$device-name";
+	action "/usr/local/etc/rc.d/uhidd start /dev/$device-name";
 };
