--- a/trunk/uhidd/Makefile
+++ b/trunk/uhidd/Makefile
@@ -1,6 +1,8 @@
 PROG=	uhidd
-SRCS=	uhidd_hid.c uhidd_hidaction.c uhidd_hidparser.c uhidd_hidump.c	\
-	uhidd_kbd.c uhidd.c uhidd_mouse.c lex.l parser.y y.tab.h	\
+#SRCS=	uhidd_hid.c uhidd_hidaction.c uhidd_hidparser.c uhidd_hidump.c	\
+#	uhidd_kbd.c uhidd.c uhidd_mouse.c lex.l parser.y y.tab.h	\
+#	usage_in_page.c usage_page.c
+SRCS=	uhidd.c uhidd_hidparser.c uhidd_hidump.c lex.l parser.y y.tab.h \
 	usage_in_page.c usage_page.c
 
 GENSRCS=	usage_in_page.c usage_page.c
