Replace the uvhid(4)-based vhid driver with a new vhid driver based on cuse4bsd.

--- a/trunk/uhidd/Makefile
+++ b/trunk/uhidd/Makefile
@@ -1,7 +1,8 @@
 PROG=	uhidd
-SRCS=	uhidd.c uhidd_vhid.c uhidd_hidcore.c uhidd_hidump.c uhidd_kbd.c  \
-	uhidd_cc.c lex.l uhidd_mouse.c parser.y y.tab.h usage_in_page.c  \
-	usage_page.c uhidd_drivers.c uhidd_hidaction.c usage_consumer.c
+SRCS=	uhidd.c uhidd_vhid_cuse.c uhidd_hidcore.c uhidd_hidump.c uhidd_kbd.c \
+	uhidd_cc.c lex.l uhidd_mouse.c parser.y y.tab.h usage_in_page.c \
+	usage_page.c uhidd_drivers.c uhidd_hidaction.c uhidd_cuse4bsd.c \
+	usage_consumer.c
 
 GENSRCS=	usage_in_page.c usage_page.c
 CLEANFILES=	${GENSRCS}
@@ -10,9 +11,10 @@ MAN=		uhidd.conf.5 uhidd.8
 WARNS?=	6
 
 DPADD=	${LIBUSB} ${LIBPTHREAD} ${LIBUTIL}
-LDADD=	-lusb -lpthread -lutil
+LDADD=	-lcuse4bsd -lusb -lpthread -lutil
 
-CFLAGS+=-I. -I${.CURDIR} -g
+CFLAGS+=-I. -I${.CURDIR} -I/usr/local/include -g
+LDFLAGS+= -L/usr/local/lib
 
 .SUFFIXES:	.awk .c
 .awk.c:
