--- a/uhidd/uhidd-devd.conf.sample
+++ b/uhidd/uhidd-devd.conf.sample
@@ -2,5 +2,5 @@ notify 0 {
 	match "subsystem" "DEVICE";
 	match "type" "ATTACH";
 	match "cdev" "ugen[0-9]+.[0-9]+";
-	action "/usr/local/etc/rc.d/uhidd start /dev/$cdev";
+	action "env LD_PRELOAD=%%LIBCUSE%% %%PREFIX%%/etc/rc.d/uhidd start /dev/$cdev";
 };
