* Fix build with FreeBSD-11 that has cuse4bsd included in the base. * Reduce WARN level to 5 to avoid the -Wmissing-variable-declarations   warnings.

--- a/uhidd/Makefile
+++ b/uhidd/Makefile
@@ -1,3 +1,12 @@
+# Get __FreeBSD_version
+.if !defined(OSVERSION)
+.if exists(/usr/include/sys/param.h)
+OSVERSION!= awk '/^\#define[[:blank:]]__FreeBSD_version/ {print $$3}' < /usr/include/sys/param.h
+.else
+OSVERSION!= sysctl -n kern.osreldate
+.endif
+.endif
+
 PROG=	uhidd
 SRCS=	uhidd.c uhidd_vhid_cuse.c uhidd_hidcore.c uhidd_hidump.c uhidd_kbd.c \
 	uhidd_cc.c lex.l uhidd_mouse.c parser.y y.tab.h usage_in_page.c \
@@ -8,14 +17,20 @@ GENSRCS=	usage_in_page.c usage_page.c
 CLEANFILES=	${GENSRCS}
 MAN=		uhidd.conf.5 uhidd.8
 
-WARNS?=	6
+WARNS?=	5
 
 PREFIX?=	/usr/local
 LOCALBASE?=	/usr/local
 LIBDIR=		${PREFIX}/lib
 
 DPADD=	${LIBUSB} ${LIBPTHREAD} ${LIBUTIL}
-LDADD=	-lcuse4bsd -lusb -lpthread -lutil
+LDADD=	-lusb -lpthread -lutil
+
+.if ${OSVERSION} >= 1100023
+LDADD+=	-lcuse
+.else
+LDADD+=	-lcuse4bsd
+.endif
 
 CFLAGS+= -I. -I${.CURDIR} -I${LOCALBASE}/include -g
 LDFLAGS+= -L${LIBDIR}
