Fix keypad support for non-English keyboards.
We can't use GIO_KEYMAP ioctl to retrieve the current keymap because
it only works under console. Instead, we use the keymap file
configured in /etc/rc.conf as a hint to map keys for keypad found on
non-English keyboard.

--- a/uhidd/Makefile
+++ b/uhidd/Makefile
@@ -11,9 +11,9 @@ PROG=	uhidd
 SRCS=	uhidd.c uhidd_vhid_cuse.c uhidd_hidcore.c uhidd_hidump.c uhidd_kbd.c \
 	uhidd_cc.c lex.l uhidd_mouse.c parser.y y.tab.h usage_in_page.c \
 	usage_page.c uhidd_drivers.c uhidd_hidaction.c uhidd_cuse4bsd.c \
-	usage_consumer.c
+	usage_consumer.c lex.kbdmap.c
 
-GENSRCS=	usage_in_page.c usage_page.c
+GENSRCS=	usage_in_page.c usage_page.c lex.kbdmap.c
 CLEANFILES=	${GENSRCS}
 MAN=		uhidd.conf.5 uhidd.8
 
@@ -34,6 +34,9 @@ LDADD+=	-lcuse4bsd
 
 CFLAGS+= -I. -I${.CURDIR} -I${LOCALBASE}/include -g
 LDFLAGS+= -L${LIBDIR}
+
+lex.kbdmap.c:	kbdmap_lex.l
+	${LEX} ${LFLAGS} -Pkbdmap ${.ALLSRC}
 
 .SUFFIXES:	.awk .c
 .awk.c:
