* Implemented general interface driver match/attach mechanism. * Implemented first interface driver: drv_microsoft. This driver   maps the "My Favorites" keys to F13, F14, F15, F16 and F18 function   keys for the Microsoft Natural Ergonomic Keyboard 4000.

--- a/uhidd/Makefile
+++ b/uhidd/Makefile
@@ -11,7 +11,7 @@ PROG=	uhidd
 SRCS=	uhidd.c uhidd_vhid_cuse.c uhidd_hidcore.c uhidd_hidump.c uhidd_kbd.c \
 	uhidd_cc.c lex.l uhidd_mouse.c parser.y y.tab.h usage_in_page.c \
 	usage_page.c uhidd_drivers.c uhidd_hidaction.c uhidd_cuse4bsd.c \
-	usage_consumer.c lex.kbdmap.c
+	usage_consumer.c lex.kbdmap.c drv_microsoft.c
 
 GENSRCS=	usage_in_page.c usage_page.c lex.kbdmap.c
 CLEANFILES=	${GENSRCS}
